[package]
name = "gres"
version = "0.2.5"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[features]
cli = ["crossterm", "parking_lot", "tokio"]

[dependencies]
async-trait = "0.1"

[dependencies.async-proto]
version = "0.18"
optional = true

[dependencies.crossterm]
version = "0.27"
optional = true

[dependencies.parking_lot]
version = "0.12"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.tokio]
version = "1"
features = ["sync"]
optional = true
