[package]
name = "gres"
version = "0.2.6"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lints.rust]
missing_docs = "deny"
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[features]
cli = ["crossterm", "parking_lot", "tokio"]

[dependencies]
async-proto = { version = "0.20", optional = true }
async-trait = "0.1"
crossterm = { version = "0.27", optional = true }
parking_lot = { version = "0.12", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
